[package]
name = "worker"
version = "0.1.0"
edition = "2021"
description = "a cloudflare worker to handle payment for pay.lightningcode.dev"
repository = "https://github.com/JoeyEamigh/pay.lightningcode.dev.git"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.7.5", default-features = false, features = [
  "json",
  "tracing",
  "macros",
  "query",
] }
axum-wasm-macros = "0.1.2"
console_error_panic_hook = "0.1.7"
graphql_client = "0.14.0"
oneshot = "0.1.6"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
time = { version = "0.3.36", features = ["wasm-bindgen"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "time",
  "json",
] }
tracing-web = "0.1.3"
wasm-bindgen-futures = "0.4.42"
worker = { version = "0.1.0", features = ['http', 'axum'] }
